; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/mshtml/extr_htmlelemcol.c_create_all_collection.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/mshtml/extr_htmlelemcol.c_create_all_collection.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { i32, i32, i32, i32, i32, i32* }
%struct.TYPE_11__ = type { i32 }

@__const.create_all_collection.buf = private unnamed_addr constant %struct.TYPE_10__ { i32 0, i32 0, i32 8, i32 0, i32 0, i32* null }, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @create_all_collection(%struct.TYPE_11__* %0, i64 %1) #0 {
  %3 = alloca %struct.TYPE_11__*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.TYPE_10__, align 8
  store %struct.TYPE_11__* %0, %struct.TYPE_11__** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = bitcast %struct.TYPE_10__* %5 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %6, i8* align 8 bitcast (%struct.TYPE_10__* @__const.create_all_collection.buf to i8*), i64 32, i1 false)
  %7 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %5, i32 0, i32 1
  %8 = load i32, i32* %7, align 4
  %9 = sext i32 %8 to i64
  %10 = mul i64 %9, 8
  %11 = trunc i64 %10 to i32
  %12 = call i32 @heap_alloc(i32 %11)
  %13 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %5, i32 0, i32 3
  store i32 %12, i32* %13, align 4
  %14 = load i64, i64* %4, align 8
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %22

16:                                               ; preds = %2
  %17 = load %struct.TYPE_11__*, %struct.TYPE_11__** %3, align 8
  %18 = call i32 @node_addref(%struct.TYPE_11__* %17)
  %19 = load %struct.TYPE_11__*, %struct.TYPE_11__** %3, align 8
  %20 = call i32 @elem_from_HTMLDOMNode(%struct.TYPE_11__* %19)
  %21 = call i32 @elem_vector_add(%struct.TYPE_10__* %5, i32 %20)
  br label %22

22:                                               ; preds = %16, %2
  %23 = load %struct.TYPE_11__*, %struct.TYPE_11__** %3, align 8
  %24 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = load %struct.TYPE_11__*, %struct.TYPE_11__** %3, align 8
  %27 = call i32 @create_all_list(i32 %25, %struct.TYPE_11__* %26, %struct.TYPE_10__* %5)
  %28 = call i32 @elem_vector_normalize(%struct.TYPE_10__* %5)
  %29 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %5, i32 0, i32 3
  %30 = load i32, i32* %29, align 4
  %31 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %5, i32 0, i32 2
  %32 = load i32, i32* %31, align 8
  %33 = call i32* @HTMLElementCollection_Create(i32 %30, i32 %32)
  ret i32* %33
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @heap_alloc(i32) #2

declare dso_local i32 @node_addref(%struct.TYPE_11__*) #2

declare dso_local i32 @elem_vector_add(%struct.TYPE_10__*, i32) #2

declare dso_local i32 @elem_from_HTMLDOMNode(%struct.TYPE_11__*) #2

declare dso_local i32 @create_all_list(i32, %struct.TYPE_11__*, %struct.TYPE_10__*) #2

declare dso_local i32 @elem_vector_normalize(%struct.TYPE_10__*) #2

declare dso_local i32* @HTMLElementCollection_Create(i32, i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
